# AudioTrain

./: .gitmodules  ASC_TEST.ipynb  AudioTrain.ipynb  BSS_STUUDY.ipynb  README.md
SheetMusic_Score_Project/: .gitignore  README.md  labeling.py  main.py  pyproject.toml  requirements.txt  versioncheck.py
SheetMusic_Score_Project/.github/: copilot-instructions.md
SheetMusic_Score_Project/.github/instructions/: InstructionMain.instructions.md  taskList.instructions.md
SheetMusic_Score_Project/audio2score/: audio_io.py  detection.py  packaging.py  pipeline.py  separation.py  transcription.py
SheetMusic_Score_Project/audio2score/utils/: registry.py
SheetMusic_Score_Project/configs/: aug.yaml  config.yaml  data.yaml  model.yaml  train.yaml
SheetMusic_Score_Project/configs/aug/: mel_16k.yaml
SheetMusic_Score_Project/configs/data/: musical_instrument_sound.yaml  nsynth.yaml  tinysol.yaml
SheetMusic_Score_Project/configs/model/: student.yaml  student_mobilenetV3Small_teacher_resnet18.yaml  student_multibranch.yaml
SheetMusic_Score_Project/configs/pipeline/: base.yaml
SheetMusic_Score_Project/configs/train/: base.yaml  train_KD_nonPruning.yaml  train_KD_progressivePruning.yaml  train_KD_singlePruning.yaml  train_nonKD_nonPruning.yaml  (+2 more)
SheetMusic_Score_Project/dataloaders/: __init__.py  augment.py  collate.py  mel_pipeline.py
SheetMusic_Score_Project/dataset_prepare/: __init__.py  folder_audio.py  irmas.py  nsynth.py  openmic_subset.py
SheetMusic_Score_Project/datasets/: __init__.py  tinysol.py
SheetMusic_Score_Project/models/: __init__.py  student_mobilenet.py  student_multibranch.py  teacher_passt.py  teacher_vit.py
SheetMusic_Score_Project/notebooks/: colab_entry.ipynb
SheetMusic_Score_Project/scripts/: check_and_setup_gpu.py  download_sample_audio.py  finetune_teacher.py  infer_classify.py  infer_pipeline.py  prune_and_finetune.py  run_experiments.py  separate_stems.py  train_kd.py
SheetMusic_Score_Project/tools/: export_onnx.py  profile_macs.py
SheetMusic_Score_Project/training/: __init__.py  kd_loss.py  loops.py  metrics.py  pruning.py
(+26 files in other folders)
