[project]
name = "sheetmusic-score-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",

    "librosa>=0.10",
    "soundfile>=0.12",
    "datasets>=2.18",

    "torchcodec>=0.1.0",


    "hydra-core>=1.3",
    "mlflow>=2.10",
    "omegaconf>=2.3",


    "torchmetrics>=1.4",
    "thop>=0.1.1.post2209072238",


    "torch-audiomentations>=0.11",
    "audiomentations>=0.37",


    "transformers>=4.44",
    "timm>=1.0.9",




    "jupyterlab>=4.2",


    "black>=24.3",
    "isort>=5.13"
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
